@@ -39,6 +39,9 @@ Version 3.8.0
   - Fix typo in pg_placeholder_colons example
     (Github issue #41)
 
+  - Support GENERATED ... AS IDENTITY columns in last_insert_id()
+    [Dagfinn Ilmari Mannsåker]
+
 Version 3.7.4. Released February 12, 2018 (git tag 3.7.4)
 
   - Fix typo in META.yml
